{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 44,
  "lineage": "b39fd448-e88d-5c97-9ca5-efe759d2776a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:188078574990:internet-gateway/igw-0a731d2bb554d277b",
            "id": "igw-0a731d2bb554d277b",
            "owner_id": "188078574990",
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-00caf9a1096579586"
          },
          "dependencies": [
            "aws_vpc.awsvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ce82e7e6d40edabe",
            "owner_id": "188078574990",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a731d2bb554d277b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route"
            },
            "vpc_id": "vpc-00caf9a1096579586"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_vpc.awsvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-1-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d88a6f577413c929",
            "route_table_id": "rtb-0ce82e7e6d40edabe",
            "subnet_id": "subnet-0ec1d4c9508aee45c"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_route_table.public-route",
            "aws_subnet.public-subnet",
            "aws_vpc.awsvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app-elb-securitygroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:188078574990:security-group/sg-0050e0abc763dd65e",
            "description": "security group for ecs",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0050e0abc763dd65e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "myapp-elb",
            "name_prefix": "",
            "owner_id": "188078574990",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app-elb"
            },
            "timeouts": null,
            "vpc_id": "vpc-00caf9a1096579586"
          },
          "dependencies": [
            "aws_vpc.awsvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs-securitygroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:188078574990:security-group/sg-0c911a4dc41587a43",
            "description": "security group for ecs",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c911a4dc41587a43",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0050e0abc763dd65e"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "ecs",
            "name_prefix": "",
            "owner_id": "188078574990",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecs"
            },
            "timeouts": null,
            "vpc_id": "vpc-00caf9a1096579586"
          },
          "dependencies": [
            "aws_security_group.app-elb-securitygroup",
            "aws_vpc.awsvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:188078574990:subnet/subnet-0b3b8f35d08a0194a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0b3b8f35d08a0194a",
            "map_public_ip_on_launch": false,
            "owner_id": "188078574990",
            "tags": {
              "Name": "private-subnet"
            },
            "vpc_id": "vpc-00caf9a1096579586"
          },
          "dependencies": [
            "aws_vpc.awsvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:188078574990:subnet/subnet-0ec1d4c9508aee45c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0ec1d4c9508aee45c",
            "map_public_ip_on_launch": true,
            "owner_id": "188078574990",
            "tags": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-00caf9a1096579586"
          },
          "dependencies": [
            "aws_vpc.awsvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "awsvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:188078574990:vpc/vpc-00caf9a1096579586",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d3ba4f9bb1ed27ef",
            "default_route_table_id": "rtb-092b7a6eb147e742e",
            "default_security_group_id": "sg-07c583fd938386c9e",
            "dhcp_options_id": "dopt-ec731a96",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-00caf9a1096579586",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-092b7a6eb147e742e",
            "owner_id": "188078574990",
            "tags": {
              "Name": "awsvpc"
            }
          }
        }
      ]
    }
  ]
}